<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="app.harbi.crysky.ui.home.view.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/favoriteFragment"
        android:name="app.harbi.crysky.ui.home.view.home.HomeFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/alertFragment"
        android:name="app.harbi.crysky.ui.home.view.home.HomeFragment"
        android:label="@string/alert"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/settingFragment"
        android:name="app.harbi.crysky.ui.home.view.settings.SettingsFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_settings" />

</navigation>