<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.home.HomeFragment">

    <data>

        <variable
            name="data"
            type="app.harbi.crysky.model.WeatherPojo" />
    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/wifi_off_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:visibility="gone"
                    app:cardCornerRadius="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:contentDescription="@string/failed_load_data"
                            app:layout_constraintBottom_toBottomOf="@+id/textView"
                            app:layout_constraintEnd_toStartOf="@+id/textView"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/textView"
                            app:srcCompat="@drawable/ic_wifi_off"
                            app:tint="#000000" />

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:text="@string/failed_load_data"
                            app:layout_constraintBottom_toBottomOf="@+id/btnRetryLoad"
                            app:layout_constraintEnd_toStartOf="@+id/btnRetryLoad"
                            app:layout_constraintStart_toEndOf="@+id/imageView"
                            app:layout_constraintTop_toTopOf="@+id/btnRetryLoad" />

                        <Button
                            android:id="@+id/btnRetryLoad"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/retry"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/textView"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="24dp"
                    android:text="@string/city_name"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_marginTop="13dp"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@+id/textView3"
                    app:layout_constraintStart_toStartOf="@+id/textView3"
                    app:layout_constraintTop_toBottomOf="@+id/textView3"
                    tools:text="15 mar 2022" />

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_margin="16dp"
                    android:background="@color/white"
                    android:contentDescription="@string/change_location"
                    android:src="@android:drawable/ic_menu_mylocation"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="#000000" />

                <ImageView
                    android:id="@+id/imgCurrent"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_margin="16dp"
                    android:contentDescription="@string/current"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3"
                    tools:srcCompat="@android:drawable/ic_menu_mylocation" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:textSize="32sp"
                    app:layout_constraintEnd_toEndOf="@+id/imgCurrent"
                    app:layout_constraintStart_toStartOf="@+id/imgCurrent"
                    app:layout_constraintTop_toBottomOf="@+id/imgCurrent"
                    tools:text="20°" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="@+id/textView4"
                    app:layout_constraintStart_toStartOf="@+id/textView4"
                    app:layout_constraintTop_toBottomOf="@id/textView4"
                    tools:text="weather" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/next_hours"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/recyclerView"
                    app:layout_constraintTop_toBottomOf="@id/tv_cloud" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView7" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/next_days"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/recyclerView2"
                    app:layout_constraintTop_toBottomOf="@id/recyclerView" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView8" />

                <ImageView
                    android:id="@+id/iv_pressure"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/current"
                    android:src="@drawable/ic_pressure"
                    app:layout_constraintEnd_toStartOf="@+id/textView5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView5" />

                <TextView
                    android:id="@+id/tv_dynamic_pressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@id/iv_pressure"
                    app:layout_constraintStart_toStartOf="@id/iv_pressure"
                    app:layout_constraintTop_toBottomOf="@id/iv_pressure"
                    tools:text="1000 hpa" />

                <TextView
                    android:id="@+id/tv_pressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pressure"
                    app:layout_constraintEnd_toEndOf="@id/iv_pressure"
                    app:layout_constraintStart_toStartOf="@id/iv_pressure"
                    app:layout_constraintTop_toBottomOf="@id/tv_dynamic_pressure" />

                <ImageView
                    android:id="@+id/iv_humidity"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/current"
                    android:src="@drawable/ic_humidity"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView5"
                    app:layout_constraintTop_toTopOf="@+id/textView5" />

                <TextView
                    android:id="@+id/tv_dynamic_humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@id/iv_humidity"
                    app:layout_constraintStart_toStartOf="@id/iv_humidity"
                    app:layout_constraintTop_toBottomOf="@id/iv_humidity"
                    tools:text="77%" />

                <TextView
                    android:id="@+id/tv_humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity"
                    app:layout_constraintEnd_toEndOf="@id/tv_dynamic_humidity"
                    app:layout_constraintStart_toStartOf="@id/tv_dynamic_humidity"
                    app:layout_constraintTop_toBottomOf="@id/tv_dynamic_humidity" />

                <ImageView
                    android:id="@+id/iv_wind"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/current"
                    android:src="@drawable/ic_wind"
                    app:layout_constraintEnd_toStartOf="@+id/iv_humidity"
                    app:layout_constraintStart_toEndOf="@+id/iv_pressure"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />

                <TextView
                    android:id="@+id/tv_dynamic_wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@id/iv_wind"
                    app:layout_constraintStart_toStartOf="@id/iv_wind"
                    app:layout_constraintTop_toBottomOf="@id/iv_wind"
                    tools:text="2 m/s" />

                <TextView
                    android:id="@+id/tv_wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wind"
                    app:layout_constraintEnd_toEndOf="@id/tv_dynamic_wind"
                    app:layout_constraintStart_toStartOf="@id/tv_dynamic_wind"
                    app:layout_constraintTop_toBottomOf="@id/tv_dynamic_wind" />

                <ImageView
                    android:id="@+id/iv_violet"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/current"
                    android:src="@drawable/ic_uv"
                    app:layout_constraintEnd_toEndOf="@+id/tv_pressure"
                    app:layout_constraintStart_toStartOf="@+id/tv_pressure"
                    app:layout_constraintTop_toBottomOf="@+id/tv_pressure" />

                <TextView
                    android:id="@+id/tv_dynamic_violet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@id/iv_violet"
                    app:layout_constraintStart_toStartOf="@id/iv_violet"
                    app:layout_constraintTop_toBottomOf="@id/iv_violet"
                    tools:text="0.0" />

                <TextView
                    android:id="@+id/tv_violet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ultra_violet"
                    app:layout_constraintEnd_toEndOf="@id/tv_dynamic_violet"
                    app:layout_constraintStart_toStartOf="@id/tv_dynamic_violet"
                    app:layout_constraintTop_toBottomOf="@id/tv_dynamic_violet" />

                <ImageView
                    android:id="@+id/iv_cloud"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/current"
                    android:src="@drawable/ic_cloud"
                    app:layout_constraintEnd_toEndOf="@+id/tv_wind"
                    app:layout_constraintStart_toStartOf="@+id/tv_wind"
                    app:layout_constraintTop_toBottomOf="@+id/tv_wind" />

                <TextView
                    android:id="@+id/tv_dynamic_cloud"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@id/iv_cloud"
                    app:layout_constraintStart_toStartOf="@id/iv_cloud"
                    app:layout_constraintTop_toBottomOf="@id/iv_cloud"
                    tools:text="0%" />

                <TextView
                    android:id="@+id/tv_cloud"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cloud"
                    app:layout_constraintEnd_toEndOf="@id/tv_dynamic_cloud"
                    app:layout_constraintStart_toStartOf="@id/tv_dynamic_cloud"
                    app:layout_constraintTop_toBottomOf="@id/tv_dynamic_cloud" />

                <ImageView
                    android:id="@+id/iv_visibility"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/current"
                    android:src="@drawable/ic_visibility"
                    app:layout_constraintEnd_toEndOf="@+id/tv_humidity"
                    app:layout_constraintStart_toStartOf="@+id/tv_humidity"
                    app:layout_constraintTop_toBottomOf="@+id/tv_humidity" />

                <TextView
                    android:id="@+id/tv_dynamic_visibility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@id/iv_visibility"
                    app:layout_constraintStart_toStartOf="@id/iv_visibility"
                    app:layout_constraintTop_toBottomOf="@id/iv_visibility"
                    tools:text="6000 m" />

                <TextView
                    android:id="@+id/tv_visibility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/visibility"
                    app:layout_constraintEnd_toEndOf="@id/tv_dynamic_visibility"
                    app:layout_constraintStart_toStartOf="@id/tv_dynamic_visibility"
                    app:layout_constraintTop_toBottomOf="@id/tv_dynamic_visibility" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>
